--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "hapi-named-routes": "~0.2.0",
     "kaiseki": "^0.5.6",
     "lodash": "^3.7.0",
+    "mailgun-js": "^0.6.9",
     "mongojs": "^0.18.0",
     "node-mandrill": "^1.0.1",
     "numeral": "^1.5.3",
@@ -35,6 +36,7 @@
     "request-promise": "^0.3.3",
     "require-directory": "~2.0.0",
     "swig": "~1.4.2",
+    "twitter": "^1.2.5",
     "underscore": "^1.7.0"
   },
   "devDependencies": {
